--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "license": "ISC",
     "dependencies": {
         "bootstrap": "^5.2.2",
+        "buffer": "^6.0.3",
+        "bufferutil": "^4.0.7",
         "electron": "^21.3.0",
         "promise-mysql": "^5.2.0",
         "uuid": "^9.0.0"
